--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,12 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   cached_network_image: ^3.0.0
   device_preview: ^1.1.0
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_signin_button: ^2.0.0
 
 dev_dependencies:
   flutter_test:
